# chess-clock

./: .gitignore  404.html  README.md  VISION.md  WORKFLOW.md  flake.nix  index.html  package-lock.json  package.json  playwright.config.ts  settings.html  svelte.config.js  update_design.py
.github/workflows/: deploy.yml  e2e.yml  firmware-emulation-tests.yml  firmware-unit-tests.yml  firmware.yml
.husky/: pre-push
_app/: env.js  version.json
docs/: README.md
docs/design/: app-icon.md  phone-layout-specs.md
docs/designs/: esp32_camera_testing_strategy.md  esp32_mvp_provisioning_pairing.md  pwa-ux-spec.md  pwa_chess_clock.md  xiao_esp32s3_ip_camera.md
docs/hardware/: esp32_mvp_provisioning_pairing.md
docs/ux/: app-icon.md  phone-layout-specs.md  pwa-ux-spec.md
firmware/: CMakeLists.txt  test_app.py
firmware/components/provisioning/: CMakeLists.txt
firmware/components/provisioning/include/: provisioning.h
firmware/components/provisioning/src/: provisioning.c
firmware/components/provisioning/test/: qr_test_image.h  test_provisioning.cpp
firmware/components/quirc/: CMakeLists.txt
firmware/main/: main.c
pr1/: 404.html
pr1/_app/: env.js  version.json
pr10/: 404.html  index.html  settings.html
pr11/: 404.html  index.html  settings.html
pr12/: 404.html  index.html  settings.html
pr13/: 404.html  index.html  settings.html
pr14/: 404.html  index.html  settings.html
pr2/: 404.html
pr3/: 404.html
pr4/: 404.html
pr5/: 404.html
pr6/: 404.html
pr7/: 404.html
pr8/: 404.html  index.html  settings.html
pr9/: 404.html  index.html  settings.html
(+401 files in other folders)
